--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "-": "0.0.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
@@ -12,6 +13,8 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.2",
     "framer-motion": "^2.3.0",
+    "gh-pages": "^3.1.0",
+    "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-animated-text": "^0.1.4",
     "react-bootstrap": "^1.3.0",
@@ -21,6 +24,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-typist": "^2.0.5",
+    "save-dev": "0.0.1-security",
     "typewriter-effect": "^2.13.1"
   },
   "scripts": {
@@ -43,5 +47,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "pretty": "prettier --write \"./**/*.{js,jsx,json}\""
 }
