--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -48,5 +50,5 @@
       "last 1 safari version"
     ]
   },
-  "pretty": "prettier --write \"./**/*.{js,jsx,json}\""
+  "homepage": "http://Shrikar-Patel.github.io/portfolio"
 }
