--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.2",
+    "elliptic": "^6.5.3",
     "framer-motion": "^2.3.0",
     "gh-pages": "^3.1.0",
     "prettier": "^2.0.5",
@@ -25,7 +26,9 @@
     "react-scripts": "3.4.1",
     "react-typist": "^2.0.5",
     "save-dev": "0.0.1-security",
-    "typewriter-effect": "^2.13.1"
+    "serialize-javascript": "^4.0.0",
+    "typewriter-effect": "^2.13.1",
+    "websocket-extensions": "^0.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
